# NilCleanMatrices

./: Nil-clean.cpp  Nil-clean.pas  Nil-clean1.cpp  Nil-clean1.pas  Nil-clean3.cpp  Nil-clean4.cpp  README.md  Source.cpp  SourceNew.cpp
NilClean5/: CMakeLists.txt  build.ps1
NilClean5/src/: CMakeLists.txt  Commands.cpp  Commands.h  IntegerSet.cpp  IntegerSet.h  Main.cpp  Matrix.cpp  Matrix.h  Matrix8.cpp  Matrix8.h  MatrixInt.cpp  MatrixInt.h  NilClean.cpp  NilClean.h  PolyMatrix.cpp  PolyMatrix.h  UserInterface.cpp  UserInterface.h
